--- a/page3.html
+++ b/page3.html
@@ -53,14 +53,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="index.html#header10-4" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>
                         Generalidades</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header10-4" aria-expanded="false">Definicion de Auditoria<br></a><a class="text-white dropdown-item display-4" href="index.html#content5-o" aria-expanded="false">Clasificacion de Auditoria</a><a class="text-white dropdown-item display-4" href="index.html#content5-v" aria-expanded="false">Alcance de la Auditoria</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
-                        Control Interno</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page2.html#header10-12" aria-expanded="false">Definicion de Control Interno</a><a class="text-white dropdown-item display-4" href="page2.html#content5-16" aria-expanded="false">Similitudes y Diferencia con Auditoria Informatica</a><a class="text-white dropdown-item display-4" href="page2.html#content5-18" aria-expanded="false">Perfil del &nbsp;Auditor Informatico</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Auditoría Informatica</a></li></ul>
+                        Control Interno</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page2.html#header10-12" aria-expanded="false">Definicion de Control Interno</a><a class="text-white dropdown-item display-4" href="page2.html#content5-16" aria-expanded="false">Similitudes y Diferencia con Auditoria Informatica</a><a class="text-white dropdown-item display-4" href="page2.html#content5-18" aria-expanded="false">Perfil del &nbsp;Auditor Informatico</a></div></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Auditoría Informatica</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page4.html#slider1-1i" aria-expanded="false">Auditoria de unidad informatica</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html#header2-1f"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                     Acerca de</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section once="footers" class="cid-rV8idAxgQD" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rV8idAxgQD" id="footer6-1e">
 
     
 
