--- a/page1.html
+++ b/page1.html
@@ -44,7 +44,7 @@
                          <img src="assets/images/logo.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Blog Audiotira Informatica</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top">Blog Audiotira Informatica</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,14 +52,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="index.html#header10-4" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>
                         Generalidades</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header10-4" aria-expanded="false">Definicion de Auditoria<br></a><a class="text-white dropdown-item display-4" href="index.html#content5-o" aria-expanded="false">Clasificacion de Auditoria</a><a class="text-white dropdown-item display-4" href="index.html#content5-v" aria-expanded="false">Alcance de la Auditoria</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
-                        Control Interno</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page2.html#header10-12" aria-expanded="false">Definicion de Control Interno</a><a class="text-white dropdown-item display-4" href="page2.html#content5-16" aria-expanded="false">Similitudes y Diferencia con Auditoria Informatica</a><a class="text-white dropdown-item display-4" href="page2.html#content5-18" aria-expanded="false">Perfil del &nbsp;Auditor Informatico</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com" aria-expanded="false"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Auditoría Informatica</a></li></ul>
+                        Control Interno</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page2.html#header10-12" aria-expanded="false">Definicion de Control Interno</a><a class="text-white dropdown-item display-4" href="page2.html#content5-16" aria-expanded="false">Similitudes y Diferencia con Auditoria Informatica</a><a class="text-white dropdown-item display-4" href="page2.html#content5-18" aria-expanded="false">Perfil del &nbsp;Auditor Informatico</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page4.html#slider1-1i" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>Auditoría Informatica</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page4.html#slider1-1i" aria-expanded="false">Auditoria de unidad informatica</a><a class="text-white dropdown-item display-4" href="page4.html#header1-1l" aria-expanded="false">Planificacion de la Auditoria</a><a class="text-white dropdown-item display-4" href="page4.html#content5-1p" aria-expanded="true">Evidencias en Auditoria</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html#header2-1f"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                     Acerca de</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section info3 cid-rV8c4N9rt9" id="info3-a">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="mbr-section info3 cid-rV8c4N9rt9" id="info3-a">
 
     
 
@@ -73,7 +73,7 @@
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">En este apartado se muestran distintos conceptos de auditoria con el proposito de ampliar al lecto la vision formal de este termino.</h3>
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
                     Cada una de los conceptos son proporcionadas por el autor de blog en correspondencia a las deficiones de diversos escritos, cuando se sienta comodo con lo que comprende sobre "Auditoria" puede regresar al blog dando clic en regresar.</p>
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="index.html#header1-x"><span class="mbri-left mbr-iconfont mbr-iconfont-btn"></span>Regresar</a></div>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="index.html#header10-4"><span class="mbri-left mbr-iconfont mbr-iconfont-btn"></span>Regresar</a></div>
             </div>
         </div>
     </div>
